syntax = "proto3";

option csharp_namespace = "gRPC.ProductService";
import "google/protobuf/wrappers.proto";
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (NumbersRequest) returns (NumbersResponse);
}

// The request message containing the user's name.
message NumbersRequest {
  int32 numberOne = 1;
  int32 numberTwo = 2;
}

// The response message containing the greetings.
message NumbersResponse {
  int32 result = 1;
}
